--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@figurl/core-utils",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -11,7 +11,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rm -rf dist && tsc",
-    "prepare": "npm run build"
+    "prepare": "npm run build",
+    "release": "yarn build && yarn pack && gh release create $npm_package_version figurl-core-utils-v$npm_package_version.tgz"
   },
   "keywords": [],
   "author": "Jeremy Magland",
